feed memo 优化，feed光标控制，后端代码调整，加索引
